# job-leads-diary

./: .gitignore  README.md  job-leads-diary.cabal  stack.yaml
app/: Main.hs
app/JobLeadsDiary/: Ajax.hs  Database.hs
app/JobLeadsDiary/Frontend/: Filetypes.hs  React.hs  Types.hs
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
