name:                job-leads-diary
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/quickdudley/job-leads-diary#readme
license:             BSD3
license-file:        LICENSE
author:              Jeremy List
maintainer:          quick.dudley@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable job-leads-diary-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       bytestring,
                       unix,
                       time,
                       stm,
                       sqlite-simple,
                       uuid,
                       text,
                       template-haskell,
                       filepath,
                       directory,
                       file-embed,
                       process,
                       wai,
                       warp-tls
  default-language:    Haskell2010

test-suite job-leads-diary-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                       app
  main-is:             Spec.hs
  build-depends:       base
                     , job-leads-diary
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quickdudley/job-leads-diary
